tests/neg/into-override.check
-- [E120] Naming Error: tests/neg/into-override.scala:16:6 -------------------------------------------------------------
16 |trait C[X] extends A[X]:  // error
   |      ^
   |      Name clash between defined and inherited member:
   |      def f(x: X): Unit in trait A at line 11 and
   |      override def f(x: Conversion.into[X]): Unit in trait C at line 17
   |      have the same type (x: Object): Unit after erasure.
   |
   |      Consider adding a @targetName annotation to one of the conflicting definitions
   |      for disambiguation.
-- [E120] Naming Error: tests/neg/into-override.scala:19:6 -------------------------------------------------------------
19 |class D[X] extends B[X], C[X] // error
   |      ^
   |      Name clash between inherited members:
   |      override def f(x: X): Unit in trait B at line 14 and
   |      override def f(x: Conversion.into[X]): Unit in trait C at line 17
   |      have the same type (x: Object): Unit after erasure.
   |
   |      Consider adding a @targetName annotation to one of the conflicting definitions
   |      for disambiguation.
-- [E120] Naming Error: tests/neg/into-override.scala:21:6 -------------------------------------------------------------
21 |trait E[X] extends C[X]: // error
   |      ^
   |      Name clash between defined and inherited member:
   |      override def f(x: Conversion.into[X]): Unit in trait C at line 17 and
   |      override def f(x: X): Unit in trait E at line 22
   |      have the same type (x: Object): Unit after erasure.
   |
   |      Consider adding a @targetName annotation to one of the conflicting definitions
   |      for disambiguation.
